--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
 		  <artifactId>log4j</artifactId>
 		  <version>1.2.14</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.1.3.Final</version>
+		</dependency>
 	  
   </dependencies>
   
