--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,14 @@
   <name>GroupleaseProject Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
+  <!-- Define Spring version as a variable -->
   <properties>
         <spring.version>4.1.1.RELEASE</spring.version>
   </properties>
   
   <dependencies>
+  
+  	<!-- Spring deps -->
   	<dependency>
 	      <groupId>org.springframework</groupId>
 	      <artifactId>spring-core</artifactId>
@@ -24,56 +27,86 @@
 	      <artifactId>spring-web</artifactId>
 	      <version>${spring.version}</version>
 	  </dependency>
-	
-	  <dependency>
-	      <groupId>javax.servlet</groupId>
-	      <artifactId>servlet-api</artifactId>
-	      <version>2.5</version>
-	  </dependency>
-	
-	  <dependency>
-	      <groupId>javax.servlet.jsp</groupId>
-	      <artifactId>jsp-api</artifactId>
-	      <version>2.1</version>
-	      <scope>provided</scope>
-	  </dependency>
-	
+	  
 	  <dependency>
 	      <groupId>org.springframework</groupId>
 	      <artifactId>spring-webmvc</artifactId>
 	      <version>${spring.version}</version>
 	  </dependency>
-	
+	  
 	  <dependency>
+		   <groupId>org.springframework</groupId>
+		   <artifactId>spring-orm</artifactId>
+		   <version>${spring.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		
+		<dependency>
 	      <groupId>org.springframework</groupId>
 	      <artifactId>spring-test</artifactId>
 	      <version>${spring.version}</version>
 	      <scope>test</scope>
 	  </dependency>
+	  <!-- End of Spring deps -->
+	
+		<!-- javax deps -->
 	  <dependency>
-	    <groupId>junit</groupId>
-	    <artifactId>junit</artifactId>
-	    <version>3.8.1</version>
-	    <scope>test</scope>
-	  </dependency>
-	  
-	  <dependency>
+    	<groupId>javax.servlet</groupId>
+    	<artifactId>javax.servlet-api</artifactId>
+    	<version>3.1.0</version>
+    	<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+    	<groupId>javax.servlet.jsp</groupId>
+    	<artifactId>javax.servlet.jsp-api</artifactId>
+    	<version>2.3.1</version>
+    	<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>persistence-api</artifactId>
+			<version>1.0.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>Javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
+		<!-- End of javax deps -->
+		
+		<!-- Hibernate deps -->
+		<dependency>
 	  	<groupId>org.hibernate</groupId>
 	  	<artifactId>hibernate-validator</artifactId>
 	  	<version>5.1.3.Final</version>
 	  </dependency>
 	  
 	  <dependency>
+    	<groupId>org.hibernate</groupId>
+    	<artifactId>hibernate-core</artifactId>
+    	<version>4.3.5.Final</version>
+		</dependency>
+		<!-- End of Hibernate deps -->
+		
+		<dependency>
 	  	<groupId>org.apache.commons</groupId>
 	  	<artifactId>commons-lang3</artifactId>
 	  	<version>3.0</version>
 	  </dependency>
 	  
-	  <dependency>
-	  	<groupId>org.slf4j</groupId>
-	  	<artifactId>slf4j-log4j12</artifactId>
-	  	<version>1.7.12</version>
-	  </dependency>
+    <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>5.1.30</version>
+		</dependency>
 	  
 	  <dependency>
 		  <groupId>log4j</groupId>
@@ -82,10 +115,17 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-validator</artifactId>
-			<version>5.1.3.Final</version>
-		</dependency>
+	  	<groupId>org.slf4j</groupId>
+	  	<artifactId>slf4j-log4j12</artifactId>
+	  	<version>1.7.12</version>
+	  </dependency>
+	  
+	  <dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>3.8.1</version>
+	    <scope>test</scope>
+	  </dependency>
 	  
   </dependencies>
   
